[gd_scene load_steps=4 format=3 uid="uid://ch7opybijq84q"]

[ext_resource type="Script" path="res://Scripts/level_selection.gd" id="1_1lxxo"]
[ext_resource type="Theme" uid="uid://dld6bm6h35xsv" path="res://UI/theme.tres" id="1_7ud0s"]
[ext_resource type="Theme" uid="uid://cuqwq507yae8h" path="res://UI/style/title.tres" id="3_1k5jv"]

[node name="LevelSelection" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7ud0s")
script = ExtResource("1_1lxxo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_left = -1071.0
offset_top = -589.0
offset_right = 1025.0
offset_bottom = 582.0
color = Color(0.0980392, 0.121569, 0.133333, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_direction = 2
layout_mode = 0
offset_left = -273.0
offset_top = -98.0
offset_right = 272.0
offset_bottom = 123.0
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="lvl1" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Level 1"

[node name="lvl2" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Level 2"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="lvl3" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
text = "Level 3"

[node name="lvl4" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
text = "Level 4"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = -905.0
offset_top = -518.0
offset_right = 806.0
offset_bottom = -138.0
theme = ExtResource("3_1k5jv")
theme_override_font_sizes/normal_font_size = 161
text = "LEVEL SELECTOR"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = -888.0
offset_top = 393.0
offset_right = -601.0
offset_bottom = 487.0
text = "Back"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/lvl3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/lvl4" to="." method="_on_lvl_4_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
